Changelog
=========

0.2.2 (2014-10-01)
------------------

- Filter out recursive group members


0.2.1 (2014-07-14)
------------------

- Fixed bug in send_emailview


0.2.0 (2014-07-11)
------------------

- Added support to override Plone's default templates: registration and password reset.


0.1.2 (2014-06-06)
------------------

- changed uninstall: keep the tool object, otherwise existing templates gets removed on reinstall
- added default template on fresh install


0.1.1 (2014-06-04)
------------------
- fixed packaging


0.1 (2014-05-02)
----------------

- Inital release (prototype)
- Added uninstall profile